[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "trc-data-reader"
dynamic = ["version"]
keywords = ["TRC", "Track", "Row", "Column", "Motion Capture"]
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name="Hugh Sorby", email="h.sorby@auckland.ac.nz" },
]
dependencies = [
    "c3d"
]
description = "A package for reading track row column (TRC) motion capture data."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
test = ["coverage"]

[project.urls]
Repository = "https://github.com/hsorby/trc-data-reader"

[tool.setuptools_scm]
